# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/templates/rust/rust_cxx.gni")
import("../../companion_device_auth.gni")
import("rust/BUILD.gni")

rust_cxx("lib_companiondeviceauthservice_rs_cpp_if") {
  sources = [ "rust/entry/companion_device_auth_ffi.rs" ]
}

ohos_rust_shared_ffi("companiondeviceauthservice_rs") {
  sources = companion_device_auth_rust_service_relative_sources

  crate_name = "companiondeviceauthservice_rs"

  include_dirs = [ "include" ]

  external_deps = companion_device_auth_rust_service_external_deps
  deps = companion_device_auth_rust_service_deps

  rustenv = []

  rustc_lints = "none"
  clippy_lints = "none"

  subsystem_name = companion_device_auth_subsystem_name
  part_name = companion_device_auth_part_name
}

ohos_rust_static_library("security_agent") {
  sources = companion_device_auth_rust_service_relative_sources
}
