# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "companion_device_auth"
version = "0.1.0"
edition = "2021"

[lib]
name = "companion_device_auth"
path = "rust/lib.rs"
crate-type = ["rlib"]

[dependencies]
libc = { version = "0.2", default-features = false }
openssl = { version = "0.10", features = ["vendored"] }
cxx = { version = "1.0", features = ["c++14"], optional = true }
hilog_rust = { git = "https://gitcode.com/openharmony/hiviewdfx_hilog.git" }

[features]
default = []
cxxbridge = ["cxx"]
test-utils = []

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
panic = "abort"

[profile.test]
panic = "unwind"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.rust]
dead_code = "allow"
unused_imports = "allow"